--- a/src/components/event.css
+++ b/src/components/event.css
@@ -46,7 +46,7 @@
         background: white;
         border: 2px solid white;
         color: var(--gray-darker);
-        text-align: center;
+        /* text-align: center; */
         font-size: 12px;
         font-weight: bold;
         display: inline-block;
