--- a/src/components/modals-common.css
+++ b/src/components/modals-common.css
@@ -119,8 +119,4 @@
     .flip-card-front, .flip-card-back {
         padding: 3vh 5vh;
     }
-      
-    /* .flip-card-back {
-        padding-top: 170px;
-    } */
 }
